# drive-embedded-auto-programming

./: .gitignore  README.md  pyproject.toml
configs/: example_drive.yaml
docs/: architecture.md
scripts/: setup-repo.ps1
src/drive_codegen/: __init__.py  cli.py  generator.py  models.py
templates/: current_sense.h.j2  drive_config.h.j2  motor_pwm.c.j2
